# shelfarrs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
assets/: style.css
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
docs/: HANDOFF.md
docs/plans/: 2026-07-02-ebook-backend-parity.md  2026-07-02-shelfarr-rs-design.md  2026-07-02-shelfarrs-design.md
migrations/: 0001_init.sql  0002_books_jobs.sql  0003_progress.sql  0004_users.sql  0005_default_repo.sql  0006_book_metadata.sql  0007_series.sql  0008_monitored.sql  0009_indexers.sql  0010_downloads.sql  0011_quality_profiles.sql  0012_isbn.sql
plugin-src/gutenberg/: Cargo.toml
plugin-src/gutenberg/src/: lib.rs
plugin-src/libgen/: Cargo.toml
plugin-src/libgen/src/: lib.rs
plugins/cbz/: plugin.json
plugins/cbz/ui/: cbz.js
plugins/gutenberg/: gutenberg.wasm  plugin.json
plugins/libgen/: libgen.wasm  plugin.json
plugins/pdf/: plugin.json
plugins/pdf/ui/: pdf.js
plugins/reader/: plugin.json
plugins/reader/ui/: reader.css  reader.js
src/: auth.rs  autosearch.rs  books.rs  discovery.rs  downloads.rs  indexer.rs  install.rs  jobs.rs  main.rs  meta.rs  opds.rs  plugin.rs  providers.rs  reader.rs  score.rs  source.rs
