[package]
name = "shelfarr-rs"
version = "0.0.0"
edition = "2021"
description = "Self-hosted ebook hub with a sandboxed plugin ecosystem (working name)"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
maud = "0.26"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[profile.release]
strip = true
lto = true
