[package]
name = "gutenberg-plugin"
version = "1.0.0"
edition = "2021"
description = "Project Gutenberg source plugin for shelfarr-rs (compiles to WASM)"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1"
shelfarr-sdk = { path = "../../crates/sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
strip = true
lto = true
